WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
78343
[GTK] security/block-test.html baselines differ from mac
https://bugs.webkit.org/show_bug.cgi?id=78343
Summary
[GTK] security/block-test.html baselines differ from mac
Philippe Normand
Reported
2012-02-10 03:02:53 PST
--- LayoutTests/platform/mac/security/block-test-expected.txt 2011-12-28 16:17:03.000000000 +0100 +++ LayoutTests/platform/gtk/security/block-test-expected.txt 2012-02-10 11:55:33.000000000 +0100 @@ -1,152 +1,152 @@
http://255.255.255.255:1/test.jpg
- willSendRequest <NSURLRequest URL
http://255.255.255.255:1/test.jpg
, main document URL block-test.html, http method GET> redirectResponse (null) <unknown> - didFinishLoading -
http://255.255.255.255:1/test.jpg
- didFailLoadingWithError: <NSError domain WebKitErrorDomain, code 103, failing URL "
http://255.255.255.255:1/test.jpg
"> +
http://255.255.255.255:1/test.jpg
- didFailLoadingWithError: <NSError domain WebKitPolicyError, code 103, failing URL "
http://255.255.255.255:1/test.jpg
"> ... Do we want to rename the GError domain from PolicyError to ErrorDomain or just deal with it in DRT?
Attachments
Patch
(29.89 KB, patch)
2012-03-02 07:59 PST
,
Philippe Normand
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Martin Robinson
Comment 1
2012-02-10 08:57:21 PST
Search and replace in the DRT maybe?
Philippe Normand
Comment 2
2012-02-10 12:27:27 PST
(In reply to
comment #1
)
> Search and replace in the DRT maybe?
We'd need to rename gquark stuff in the GError :) I'd be fine with that though!
Martin Robinson
Comment 3
2012-02-10 17:47:37 PST
I was just suggesting doing s/WebKitPolicyError/WebKitErrorDomain in the callback for didFailLoadingWithError.
Philippe Normand
Comment 4
2012-03-02 04:30:18 PST
Committed
r109554
: <
http://trac.webkit.org/changeset/109554
>
Philippe Normand
Comment 5
2012-03-02 04:34:01 PST
(In reply to
comment #4
)
> Committed
r109554
: <
http://trac.webkit.org/changeset/109554
>
Hum sorry this commit is partly wrong. There's no LayoutTests/security/block-test-expected.txt in ToT, NRWT played on me and generated one when I removed the gtk baseline :( I'll work on a follow-up patch, sorry.
Philippe Normand
Comment 6
2012-03-02 07:59:08 PST
Created
attachment 129901
[details]
Patch
Philippe Normand
Comment 7
2012-03-02 08:45:49 PST
Comment on
attachment 129901
[details]
Patch Clearing flags on attachment: 129901 Committed
r109581
: <
http://trac.webkit.org/changeset/109581
>
Philippe Normand
Comment 8
2012-03-02 08:45:56 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug