[GTK] security/block-test.html baselines differ from mac https://bugs.webkit.org/show_bug.cgi?id=78343

Reviewed by Martin Robinson.

Tools:

Improved the FrameLoader error heuristics to match mac behavior a
bit more.

* DumpRenderTree/gtk/DumpRenderTree.cpp:
(pathFromSoupURI): Handle ftp urls the same as http urls.
(descriptionSuitableForTestResult): Map WebKitPolicyError to WebKitErrorDomain.

LayoutTests:

GTK baselines updates for two security tests. They're closer to
the mac baselines now.

* platform/gtk/security/block-test-expected.txt: Added.
* platform/gtk/security/block-test-no-port-expected.txt:

Canonical link: https://commits.webkit.org/97256@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@109581 268f45cc-cd09-0410-ab3c-d52691b4dbfc